Fixing z-index : input block was above title bar shade

--- a/client/src/cnb-editor/cnb-editor-input/cnb-editor-input.component.css
+++ b/client/src/cnb-editor/cnb-editor-input/cnb-editor-input.component.css
@@ -1,5 +1,4 @@
 .ace-edit {
     height: 100%;
     width: 100%;
-    z-index: -1;
 }
