--- a/client/src/cnb-editor/cnb-editor/cnb-editor.component.css
+++ b/client/src/cnb-editor/cnb-editor/cnb-editor.component.css
@@ -2,4 +2,5 @@
     height: calc(100% - (61px + 50px));
     width: calc(100% + 15px);
     overflow-y: hidden;
+	padding-top: 10px;
 }
